--- a/client/group.jade
+++ b/client/group.jade
@@ -71,18 +71,18 @@ template(name='group')
                 .ui.compact.button.set_list(class=list_class)
                     i.list.icon
                     |list
-            // .scrollin
-            if posts.count
-                if skv_is 'view_layout' 'grid'
-                    .ui.stackable.centered.three.column.grid 
+            .scrolling
+                if posts.count
+                    if skv_is 'view_layout' 'grid'
+                        .ui.stackable.centered.three.column.grid 
+                            each posts
+                                +post_card_small
+                    else if skv_is 'view_layout' 'list'
                         each posts
-                            +post_card_small
-                else if skv_is 'view_layout' 'list'
-                    each posts
-                        +doc_item
-            else
-                .ui.left.aligned.basic.segment
-                    i.massive.grey.loading.yin.yang.icon
+                            +doc_item
+                else
+                    .ui.left.aligned.basic.segment
+                        i.massive.grey.loading.yin.yang.icon
         .four.wide.left.aligned.column.scrollng.seg
             // +alpha
             if location_tags
@@ -197,7 +197,7 @@ template(name='group')
                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.image.large.label.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.image.large.link.label.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -206,7 +206,7 @@ template(name='tag_picker')
         //     small #{count}
         
 template(name='unpick_tag')
-    a.unpick_tag.ui.active.compact.button(href='#')
+    a.unpick_tag.ui.active.image.label(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -216,7 +216,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.link.small.image.label.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -268,6 +268,7 @@ template(name='post_card_small')
         i.thumbs.up.outline.grey.icon
         | #{data.num_comments}
         i.comment.outline.grey.icon
+        |#{when}
         // i.clock.icon
         // each time_tags
         //     .ui.tiny.label #{this}
