loading animation init, tighter watson_small, ufrom, combined array search maybe

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -52,8 +52,7 @@ template(name='icon')
 
 
 template(name='print_this')
-    .ui.icon.basic.button.print_this
-        i.orange.code.icon
+    i.circular.code.link.icon.print_this
 
 
 template(name='comments')
@@ -78,7 +77,7 @@ template(name='comments')
 
 
 template(name='remove_button')
-    .ui.icon.button.remove_doc(title='delete')
+    .ui.icon.basic.circular.button.remove_doc(title='delete')
         i.remove.icon
         // |delete
 
