--- a/client/fields.jade
+++ b/client/fields.jade
@@ -488,13 +488,13 @@ template(name='array_edit')
     if field_value
         each field_value
             if in_dev
-                .ui.large.circular.label.touch_element
+                .ui.large.label.touch_element
                     i.delete.icon.remove_element
                     |#{this}
-                // .ui.compact.circular.button.pick_tag
+                // .ui.compact.button.pick_tag
                 //     |#{this}
             else
-                .ui.compact.circular.button.pick_tag
+                .ui.compact.button.pick_tag
                     |#{this}
 
 // template(name='array_edit')
@@ -515,13 +515,13 @@ template(name='array_edit')
 //     if field_value
 //         each field_value
 //             if in_dev
-//                 .ui.large.circular.label
+//                 .ui.large.label
 //                     i.delete.icon.remove_element
 //                     |#{this}
-//                 .ui.compact.circular.button.pick_tag
+//                 .ui.compact.button.pick_tag
 //                     |#{this}
 //             else
-//                 .ui.compact.circular.button.pick_tag
+//                 .ui.compact.button.pick_tag
 //                     |#{this}
             
                 
