--- a/client/love.jade
+++ b/client/love.jade
@@ -142,7 +142,7 @@ template(name='love')
                             if author
                                 i.grey.user.outline.icon
                                 |#{author}
-                            a.ui.icon.compact.circular.button(href="/love/#{_id}/view")
+                            a.ui.icon.compact.button(href="/love/#{_id}/view")
                                 i.chevron.right.icon
                                 
                                 
