--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -86,9 +86,9 @@ template(name='ruser')
                     each ruser_post_time_tag_results
                         a.ui.basic.small.link.label.select_ruser_post_time_tag(title=count) #{name}
                         |&nbsp;
-                    // .ui.circular.icon.button.rpost_skip_right
+                    // .ui.icon.button.rpost_skip_right
                     //     i.chevron.right.icon
-                    // .ui.circular.icon.button.rpost_skip_left
+                    // .ui.icon.button.rpost_skip_left
                     //     i.chevron.left.icon
                     .scrolling
                         each ruser_rposts
