--- a/client/post.jade
+++ b/client/post.jade
@@ -2,105 +2,106 @@ template(name='post_view')
     with doc_by_id
         .ui.stackable.grid
             .row 
-                .twelve.wide.column.scrlling
+                .twelve.wide.column
                     a.ui.large.button(href="/#{group}")
                         i.chevron.left.icon
                         |#{group}
-                    .ui.inline.header.say(class=sentiment_class)
+                    .ui.inline.header.say(class=emotion_color)
                         |!{data.title} #{data.link_title} #{title}
-                    if image_link
-                        a(href="/#{group}")
-                            +image_link_view key='image_link' direct=true
-                    if image_id
-                        a(href="/#{group}")
-                            img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    if youtube_id
-                        +youtube_view key='youtube_id' label='youtube id' direct=true
-                    if raw 
-                        |!{raw}
-                    .say_this.say_body
-                        |!{content}
-                    | {{ufrom data.created}}
-                    div
-                    // +skve k='view_section' v='main' l='main' i='content'
-                    // +skve k='view_section' v='comments' l='comments' i='comment'
-                    // +skve k='view_section' v='watson' l='emotion' i='dna'
-                    // if tone
-                    //     +skve k='view_section' v='tone' l='tone' i='smile grey'
-                    // // +skve k='view_section' v='tags' l='tags' i='tags'
-                    // +skve k='view_section' v='related' l='related' i='fork'
-                    // +skve k='view_section' v='preview' l='preview' i='content'
-                    // if skv_is 'view_section' 'main'
-                    // if skv_is 'view_section' 'main'
-                    if is_image
-                        a.view_post(href="/#{subreddit}/p/#{_id}" class=sentiment_class)
-                            img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
-                    else if data.is_reddit_media_domain
-                        img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
-                    else if watson.metadata.image
-                        img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
-                    if is_youtube
+                    .scrolling
+                        if image_link
+                            a(href="/#{group}")
+                                +image_link_view key='image_link' direct=true
+                        if image_id
+                            a(href="/#{group}")
+                                img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                        if youtube_id
+                            +youtube_view key='youtube_id' label='youtube id' direct=true
+                        if raw 
+                            |!{raw}
+                        .say_this.say_body
+                            |!{content}
+                        | {{ufrom data.created}}
                         div
-                        // .ui.fluid.embed
-                        //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
-                        iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    else if embed
-                        span.f11.full
-                            |!{embed}
-                    if data.link_url
-                        img.ui.image.pointer.call_visual(src=data.link_url)
-                    div
-                    span.f12.say !{data.html}
-                    // if parsed_selftext_html
-                    //     .ui.segment
-                    //         |!{parsed_selftext_html}
-                    if data.selftext
-                        // .ui.segment
-                        .f12.say
-                            |{{#markdown}} {{data.selftext}} {{/markdown}}
-                    else if data.body
+                        // +skve k='view_section' v='main' l='main' i='content'
+                        // +skve k='view_section' v='comments' l='comments' i='comment'
+                        // +skve k='view_section' v='watson' l='emotion' i='dna'
+                        // if tone
+                        //     +skve k='view_section' v='tone' l='tone' i='smile grey'
+                        // // +skve k='view_section' v='tags' l='tags' i='tags'
+                        // +skve k='view_section' v='related' l='related' i='fork'
+                        // +skve k='view_section' v='preview' l='preview' i='content'
+                        // if skv_is 'view_section' 'main'
+                        // if skv_is 'view_section' 'main'
+                        if is_image
+                            a.view_post(href="/#{subreddit}/p/#{_id}" class=emotion_color)
+                                img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
+                        else if data.is_reddit_media_domain
+                            img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
+                        else if watson.metadata.image
+                            img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
+                        if is_youtube
+                            div
+                            // .ui.fluid.embed
+                            //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+                            iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        else if embed
+                            span.f11.full
+                                |!{embed}
+                        if data.link_url
+                            img.ui.image.pointer.call_visual(src=data.link_url)
                         div
-                        .f12.say
-                            |{{nl2br data.body}}
-                    else if data.body_html
-                        div
-                        .f12.say
-                            |!{data.body_html}
-                    else if watson.analyzed_text
-                        .say.f12
-                            |{{nl2br watson.analyzed_text}}
-                    // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    .spacer
-                    // img(src=url)
-                    // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
-                    //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
-                    // .rounded
-                    //     |!{embed}
-                    // if skv_is 'view_section' 'watson'
-                    +rcomments_tab
-                    // +watson_full
-                    // if skv_is 'view_section' 'related'
-                    +post_related
-                    +related_questions
-                    if skv_is 'view_section' 'tone'
-                        +tone
-                        // +skve k='view_section' v='money' l='money' i='money'
-                        // if skv_is 'view_section'
-                    if skv_is 'view_section' 'preview'
-                        iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
-                    // +convert
-                    // .spacer
-                    // if skv_is 'view_section' 'tags'
-                    // if skv_is 'view_section' 'comments'
-                        
-                    div 
-                    .spacer
-                    .spacer
-                    +comments
-                    if watson
-                        .scrolling
-                            +watson_view
-                            +watson_full
+                        span.f12.say !{data.html}
+                        // if parsed_selftext_html
+                        //     .ui.segment
+                        //         |!{parsed_selftext_html}
+                        if data.selftext
+                            // .ui.segment
+                            .f12.say
+                                |{{#markdown}} {{data.selftext}} {{/markdown}}
+                        else if data.body
+                            div
+                            .f12.say
+                                |{{nl2br data.body}}
+                        else if data.body_html
+                            div
+                            .f12.say
+                                |!{data.body_html}
+                        else if watson.analyzed_text
+                            .say.f12
+                                |{{nl2br watson.analyzed_text}}
+                        // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        .spacer
+                        // img(src=url)
+                        // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
+                        //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
+                        // .rounded
+                        //     |!{embed}
+                        // if skv_is 'view_section' 'watson'
+                        +rcomments_tab
+                        // +watson_full
+                        // if skv_is 'view_section' 'related'
+                        +post_related
+                        +related_questions
+                        if skv_is 'view_section' 'tone'
+                            +tone
+                            // +skve k='view_section' v='money' l='money' i='money'
+                            // if skv_is 'view_section'
+                        if skv_is 'view_section' 'preview'
+                            iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
+                        // +convert
+                        // .spacer
+                        // if skv_is 'view_section' 'tags'
+                        // if skv_is 'view_section' 'comments'
+                            
+                        div 
+                        .spacer
+                        .spacer
+                        +comments
+                        if watson
+                            .scrolling
+                                +watson_view
+                                +watson_full
                 .four.wide.column.scrolling
                     .ui.segmen
                         // div
@@ -211,8 +212,8 @@ template(name='rcomment')
             a.author.say(href="/user/#{data.author}") #{data.author}
             span.metadata 
                 span.date {{ufrom data.created}}
-                +doc_emotion_small
-            .pointer.f13.say(class=sentiment_class)
+                // +doc_emotion_small
+            .ui.small.header.pointer.say(class=emotion_color)
                 |{{#markdown}} {{data.body}} {{/markdown}}
             .actions
                 each tags 
@@ -224,7 +225,7 @@ template(name='rcomment')
                     .one.wide.column
                     .fifteen.wide.column
                         a.author(href="/user/#{data.author}") #{data.author}
-                        .pointer.content.f12.say
+                        .ui.header.pointer.content.say(class=emotion_color)
                             |{{#markdown}} {{data.body}} {{/markdown}}
                             // .text.say #{data.score} #{data.body}
             // if in_dev
@@ -236,15 +237,15 @@ template(name='post_related')
     .ui.header related
     .ui.list
         each related_posts
-            a.item.say.pointer.zoomer(href="/r/#{subreddit}/p/#{_id}" class=sentiment_class) 
+            a.item.say.pointer.zoomer(href="/r/#{subreddit}/p/#{_id}" class=emotion_color) 
                 if data.is_reddit_media_domain
-                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=sentiment_class)
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=emotion_color)
                         img.ui.small.rounded.image.toggle_view(src=data.url)
                 else if watson.metadata.image
-                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=sentiment_class)
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=emotion_color)
                         img.ui.rounded.small.inline.image.toggle_view(src=watson.metadata.image)
                 else if data.thumbnail
-                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=sentiment_class)
+                    a.view_post(href="/r/#{subreddit}/p/#{_id}" class=emotion_color)
                         img.ui.rounded.small.inline.image(src=data.thumbnail)    
             
                 .ui.inline.small.header !{data.title} #{data.link_title}
@@ -257,15 +258,15 @@ template(name='related_questions')
     .ui.header related questions
     .ui.list
         each qs
-            a.item.say.pointer.zoomer.set_main(href="/s/#{site}/q/#{question_id}" class=sentiment_class) 
+            a.item.say.pointer.zoomer.set_main(href="/s/#{site}/q/#{question_id}" class=emotion_color) 
                 if data.is_reddit_media_domain
-                    a.view_post(href="/s/#{site}/q/#{question_id}" class=sentiment_class)
+                    a.view_post(href="/s/#{site}/q/#{question_id}" class=emotion_color)
                         img.ui.small.rounded.image.toggle_view(src=data.url)
                 else if watson.metadata.image
-                    a.view_post(href="/s/#{site}/q/#{question_id}" class=sentiment_class)
+                    a.view_post(href="/s/#{site}/q/#{question_id}" class=emotion_color)
                         img.ui.rounded.small.inline.image.toggle_view(src=watson.metadata.image)
                 else if data.thumbnail
-                    a.view_post(href="/s/#{site}/q/#{question_id}" class=sentiment_class)
+                    a.view_post(href="/s/#{site}/q/#{question_id}" class=emotion_color)
                         img.ui.rounded.small.inline.image(src=data.thumbnail)    
             
                 .ui.inline.small.header !{title}
